--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
 
       <a href="#">
-        <h1 class="logo">Tourest</h1>
+        <h1 class="logo">WanderEase</h1>
       </a>
 
       <button class="nav-toggle-btn" data-nav-toggle-btn aria-label="Toggle Menu">
@@ -94,15 +94,16 @@
         - #HERO
       -->
 
-      <section class="section hero"
-        style="background-image: url('./assets/images/hero-bg-bottom.png') url('./assets/images/hero-bg-top.png')">
+      <section class="section hero" style="
+        background-image: url(https://static.vecteezy.com/system/resources/previews/026/717/001/non_2x/group-of-happy-friends-and-laughing-tourism-travel-people-sharing-good-and-positive-mood-backpack-camping-hiking-journey-travel-trek-concept-with-blurred-background-generative-ai-illustration-free-photo.jpg) 
+        ">
         <div class="container">
 
-          <img src="./assets/images/shape-1.png" width="61" height="61" alt="Vector Shape" class="shape shape-1">
+          <!-- <img src="./assets/images/shape-1.png" width="61" height="61" alt="Vector Shape" class="shape shape-1">
 
           <img src="./assets/images/shape-2.png" width="56" height="74" alt="Vector Shape" class="shape shape-2">
 
-          <img src="./assets/images/shape-3.png" width="57" height="72" alt="Vector Shape" class="shape shape-3">
+          <img src="./assets/images/shape-3.png" width="57" height="72" alt="Vector Shape" class="shape shape-3"> -->
 
           <div class="hero-content">
 
@@ -122,10 +123,7 @@
 
           </div>
 
-          <figure class="hero-banner">
-            <img src="./assets/images/hero-banner.png" width="686" height="812" loading="lazy" alt="hero banner"
-              class="w-100">
-          </figure>
+
 
         </div>
       </section>
@@ -151,14 +149,15 @@
               <a href="#" class="destination-card">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/destination-1.jpg" width="1140" height="1100" loading="lazy"
-                    alt="Malé, Maldives" class="img-cover">
+                  <img
+                    src="https://images.unsplash.com/photo-1576487248805-cf45f6bcc67f?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTh8fHxlbnwwfHx8fHw%3D"
+                    width="1140" height="1100" loading="lazy" alt="" class="img-cover">
                 </figure>
 
                 <div class="card-content">
-                  <p class="card-subtitle">Malé</p>
+                  <p class="card-subtitle">Agra </p>
 
-                  <h3 class="h3 card-title">Maldives</h3>
+                  <h3 class="h3 card-title">India</h3>
                 </div>
 
               </a>
@@ -168,14 +167,15 @@
               <a href="#" class="destination-card">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/destination-2.jpg" width="1140" height="1100" loading="lazy"
-                    alt="Bangkok, Thailand" class="img-cover">
+                  <img
+                    src="https://images.unsplash.com/photo-1593693411515-c20261bcad6e?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8a2VyYWxhJTIwdG91cmlzbXxlbnwwfHwwfHx8MA%3D%3D"
+                    width="1140" height="1100" loading="lazy" alt="" class="img-cover">
                 </figure>
 
                 <div class="card-content">
-                  <p class="card-subtitle">Bangkok</p>
+                  <p class="card-subtitle">Kerala</p>
 
-                  <h3 class="h3 card-title">Thailand</h3>
+                  <h3 class="h3 card-title">India</h3>
                 </div>
 
               </a>
@@ -185,8 +185,25 @@
               <a href="#" class="destination-card">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/destination-3.jpg" width="1110" height="480" loading="lazy"
-                    alt="Kuala Lumpur, Malaysia" class="img-cover">
+                  <img src="https://www.planetware.com/photos-large/USNY/usa-best-places-new-york.jpg" width="1110"
+                    height="480" loading="lazy" alt="" class="img-cover">
+                </figure>
+
+                <div class="card-content">
+                  <p class="card-subtitle">New York</p>
+
+                  <h3 class="h3 card-title">USA</h3>
+                </div>
+
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="destination-card">
+
+                <figure class="card-banner">
+                  <img src="https://cdn.britannica.com/49/102749-050-B4874C95/Kuala-Lumpur-Malaysia.jpg" width="1110"
+                    height="480" loading="lazy" alt="" class="img-cover">
                 </figure>
 
                 <div class="card-content">
@@ -202,29 +219,13 @@
               <a href="#" class="destination-card">
 
                 <figure class="card-banner">
-                  <img src="./assets/images/destination-4.jpg" width="1110" height="480" loading="lazy"
-                    alt="Kathmandu, Nepal" class="img-cover">
+                  <img
+                    src="https://imageio.forbes.com/specials-images/imageserve/675172642/pura-ulun-danu-bratan-temple-in-Bali-/960x0.jpg?format=jpg&width=960"
+                    width="1110" height="480" loading="lazy" alt="Jakarta, Indonesia" class="img-cover">
                 </figure>
 
                 <div class="card-content">
-                  <p class="card-subtitle">Kathmandu</p>
-
-                  <h3 class="h3 card-title">Nepal</h3>
-                </div>
-
-              </a>
-            </li>
-
-            <li>
-              <a href="#" class="destination-card">
-
-                <figure class="card-banner">
-                  <img src="./assets/images/destination-5.jpg" width="1110" height="480" loading="lazy"
-                    alt="Jakarta, Indonesia" class="img-cover">
-                </figure>
-
-                <div class="card-content">
-                  <p class="card-subtitle">Jakarta</p>
+                  <p class="card-subtitle">Bali</p>
 
                   <h3 class="h3 card-title">Indonesia</h3>
                 </div>
@@ -287,10 +288,12 @@
                   </div>
 
                   <h3 class="card-title">
-                    <a href="#">A good traveler has no fixed plans and is not intent on arriving.</a>
+                    <a href="#">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est a, corrupti unde illo
+                      eligendi ipsa nihil, expedita tempora magni cupiditate sint consequatur aliquam perspiciatis error
+                      quae! Provident saepe quae fugit?</a>
                   </h3>
 
-                  <address class="card-location">Kuala Lumpur, Malaysia</address>
+                  <address class="card-location">tempora magni cupiditate sint</address>
 
                 </div>
 
@@ -330,10 +333,12 @@
                   </div>
 
                   <h3 class="card-title">
-                    <a href="#">A good traveler has no fixed plans and is not intent on arriving.</a>
+                    <a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, est! Voluptatum aperiam,
+                      totam repellat laborum ex eveniet, ipsum voluptatem odio cum neque autem quia id corrupti vero
+                      modi, praesentium atque..</a>
                   </h3>
 
-                  <address class="card-location">Kuala Lumpur, Malaysia</address>
+                  <address class="card-location">tempora magni cupiditate sint</address>
 
                 </div>
 
@@ -373,10 +378,12 @@
                   </div>
 
                   <h3 class="card-title">
-                    <a href="#">A good traveler has no fixed plans and is not intent on arriving.</a>
+                    <a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid deserunt odio maxime
+                      similique quas consectetur delectus ipsa nemo. Architecto quod cupiditate cum facere, voluptates
+                      ipsam! Minus esse officiis provident modi!</a>
                   </h3>
 
-                  <address class="card-location">Kuala Lumpur, Malaysia</address>
+                  <address class="card-location">tempora magni cupiditate sint</address>
 
                 </div>
 
@@ -468,7 +475,7 @@
           </div>
 
           <figure class="about-banner">
-            <img src="./assets/images/about-banner.png" width="756" height="842" loading="lazy" alt="" class="w-100">
+            <img src="https://i.postimg.cc/rsVxdY32/full-shot-travel-concept-with-landmarks-23-2149153258-1.png" width="756" height="842" loading="lazy" alt="" class="w-100">
           </figure>
 
         </div>
@@ -781,10 +788,10 @@
 
       <div class="footer-bottom">
 
-        <a href="#" class="logo">Tourest</a>
+        <a href="#" class="logo">WanderEase</a>
 
         <p class="copyright">
-          &copy; 2022 <a href="#" class="copyright-link">codewithsadee</a>. All Rights Reserved
+          &copy; 2022 <a href="#" class="copyright-link">WanderEase</a>. All Rights Reserved
         </p>
 
         <ul class="social-list">
